--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "karma-jasmine": "^0.3.5",
     "mongobackup": "^0.1.8",
     "yargs": "^3.4.4"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
