--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "plivo-node": "^0.2.5",
     "plugin": "^0.3.3",
     "sendgrid": "^1.6.0",
-    "serve-favicon": "~2.2.0",
+    "serve-favicon": "^2.2.1",
     "underscore": "^1.8.1"
   },
   "devDependencies": {
