--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "~4.11.1",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.10.3",
+    "express.io": "^1.1.13",
     "express3-handlebars": "^0.5.2",
     "gm": "^1.17.0",
     "gulp-clean": "^0.3.1",
