--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.5",
     "mongobackup": "^0.1.8",
+    "nightwatch": "^0.9.15",
     "yargs": "^3.4.4"
   },
   "engines": {
