--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ node_js:
   - 6
 before_install:
   - export CHROME_BIN=chromium-browser
-  - export DISPLAY-:99.0
+  - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - nvm install 6.10.3
 install:
