--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ before_install:
 install:
   - npm install
 before_script:
-  - npm build
-  - npm build-concat
+  - npm install -g gulp
 script:
   - npm test
 deploy:
