--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: required
 dist: trusty
 language: java
 addons:
+  code_climate:
+    repo_token: 14d906ef806fff60b53bec934ae2d10f3b56ec62a885cba3bc7b4be4cd966cbf
   apt:
     sources:
       - google-chrome
@@ -20,8 +22,13 @@ install:
   - npm install
 before_script:
   - npm install -g gulp
+  - npm install -g istanbul
 script:
   - npm test
+  - istanbul cover app.js
+after_success:
+  - npm install -g codeclimate-test-reporter
+  - codeclimate-test-reporter < ./coverage/lcov.info
 deploy:
   provider: heroku
   api_key:
