--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babyparse": "^0.4.1",
     "bcrypt-nodejs": "latest",
     "body-parser": "^1.10.2",
+    "codeclimate-test-reporter": "^0.4.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
@@ -32,6 +33,7 @@
     "gulp-util": "^3.0.4",
     "hjs": "~0.0.6",
     "imgur": "^0.1.7",
+    "istanbul": "^0.4.5",
     "mongodb": "*",
     "monk": "*",
     "morgan": "~1.5.1",
