--- a/codebrag-2.3.4/codebrag.conf
+++ b/codebrag-2.3.4/codebrag.conf
@@ -2,17 +2,17 @@ repositories {
 
 #    These are global settings, applied to all repositories if not overriden (see below)
 #    Uncomment either username/password or passphrase depending on your git/svn repositories authentication method
-    username = "c1wei"
-    password = "Geniusy1"
+#    username = ""
+#    password = ""
 #    passphrase = "secret_passphrase"
 
 
 #    Repository-specific settings, applied to repository with given name
-#    repo_name {
-#        username = "johndoe"
-#        password = "secret_password"
+    team2 {
+        username = "c1wei"
+        password = "Geniusy1"
 #        passphrase = "secret_passphrase"
-#    }
+    }
 
 }
 
@@ -21,7 +21,7 @@ codebrag {
     repos-root = "./repos"
     send-anon-usage-data = false
     web-server-port = 8080
-    application-url = "http://localhost:8080"
+    application-url = "https://tbd-team2.herokuapp.com"
 
     # number of people who need to review a commit (1, 2, ..., all)
     required-reviewers-count = 1
