--- a/package.json
+++ b/package.json
@@ -77,5 +77,17 @@
   },
   "engines": {
     "node": "0.10.x"
+  },
+  "nyc": {
+    "exclude": [
+      "node_modules",
+      "apidoc",
+      "bin",
+      "client",
+      "config",
+      "coverage",
+      "lib",
+      "test"
+    ]
   }
 }
