--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,9 @@
+engines:
+  duplication:
+    enabled: true
+    config:
+      languages:
+        - javascript
 exclude_paths:
     - "node_modules/"
     - "apidoc/"
