--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,10 +7,10 @@ engines:
 ratings:
   paths:
     - bin/**
-    - client/**
-    - public/javascripts/**
+    - lib/**
     - routes/**
     - server/**
+    - views/**
 exclude_paths:
     - "node_modules/"
     - "apidoc/"
@@ -18,6 +18,7 @@ exclude_paths:
     - "config/"
     - "coverage/"
     - "dist/"
+    - "public/"
     - "test/"
     - "gulpfile.js"
     - "karma.conf.js"
