twilio npm installs

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sendgrid": "^1.6.0",
     "serve-favicon": "^2.2.1",
     "socket.io": "^1.4.5",
+    "twilio": "^3.3.0",
     "underscore": "^1.8.1"
   },
   "devDependencies": {
