--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_script:
   - npm install -g istanbul
   - npm install -g mocha
   - npm install -g nyc
+  - npm install -g twilio
 script:
   - npm test
 after_success:
